Cleanups to lib solution.

--- a/libraries/FFGAppImport/FFGAppImport.csproj
+++ b/libraries/FFGAppImport/FFGAppImport.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <NoWarn>0108</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,18 +41,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetImport\AppFinder.cs" />
-    <Compile Include="AssetImport\AssetPreloadData.cs" />
-    <Compile Include="AssetImport\AssetsFile.cs" />
-    <Compile Include="AssetImport\AudioClip.cs" />
-    <Compile Include="AssetImport\BuildSettings.cs" />
-    <Compile Include="AssetImport\ClassIDReference.cs" />
-    <Compile Include="AssetImport\EndianStream.cs" />
+    <Compile Include="AssetImport\Unity_Studio\AssetPreloadData.cs" />
+    <Compile Include="AssetImport\Unity_Studio\AssetsFile.cs" />
+    <Compile Include="AssetImport\Unity_Studio\AudioClip.cs" />
+    <Compile Include="AssetImport\Unity_Studio\BuildSettings.cs" />
+    <Compile Include="AssetImport\Unity_Studio\ClassIDReference.cs" />
+    <Compile Include="AssetImport\Unity_Studio\EndianStream.cs" />
     <Compile Include="AssetImport\ExtractDataTool.cs" />
     <Compile Include="AssetImport\FetchContent.cs" />
-    <Compile Include="AssetImport\Font.cs" />
+    <Compile Include="AssetImport\Unity_Studio\Font.cs" />
     <Compile Include="AssetImport\FSBExport.cs" />
-    <Compile Include="AssetImport\GameObject.cs" />
-    <Compile Include="AssetImport\helpers.cs" />
+    <Compile Include="AssetImport\Unity_Studio\GameObject.cs" />
+    <Compile Include="AssetImport\Unity_Studio\helpers.cs" />
     <Compile Include="AssetImport\MoMFinder.cs" />
     <Compile Include="AssetImport\oggencoder\ArrayExtensions.cs" />
     <Compile Include="AssetImport\oggencoder\Block.cs" />
@@ -435,9 +436,9 @@
     <Compile Include="AssetImport\OggVorbisHeader.cs" />
     <Compile Include="AssetImport\Registry.cs" />
     <Compile Include="AssetImport\RtLFinder.cs" />
-    <Compile Include="AssetImport\TextAsset.cs" />
-    <Compile Include="AssetImport\Texture2D.cs" />
-    <Compile Include="AssetImport\Transform.cs" />
+    <Compile Include="AssetImport\Unity_Studio\TextAsset.cs" />
+    <Compile Include="AssetImport\Unity_Studio\Texture2D.cs" />
+    <Compile Include="AssetImport\Unity_Studio\Transform.cs" />
     <Compile Include="FFGAppImport.cs" />
   </ItemGroup>
   <ItemGroup>
