--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -20,7 +20,7 @@ image="../ffg/img/Monster_Deep_One.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=2
 traits=humanoid
 
 [MonsterDeepOneHybrid]
@@ -32,7 +32,7 @@ image="../ffg/img/Monster_Deep_One_Hybrid.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=2
 traits=humanoid
 
 [MonsterGhost]
