--- a/content/MoM/base/monsters1E.ini
+++ b/content/MoM/base/monsters1E.ini
@@ -77,7 +77,7 @@ image="../ffg/img/Monster_Witch.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=2
 traits=humanoid
 
 [MonsterCultLeader]
