--- a/content/MoM/base/monstersCotW.ini
+++ b/content/MoM/base/monstersCotW.ini
@@ -18,7 +18,7 @@ image="../ffg/img/Monster_Dark_Druid.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=2
 traits=humanoid
 
 [MonsterDarkYoung]
