--- a/content/MoM/base/monstersCotW.ini
+++ b/content/MoM/base/monstersCotW.ini
@@ -8,6 +8,7 @@ image="../ffg/img/Monster_Child_Of_The_Goat.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterDarkDruid]
 ; Optional name for display (if spaces or other formatting required)
@@ -43,6 +44,7 @@ image="../ffg/img/Monster_Goat_Spawn.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterNightgaunt]
 ; Optional name for display (if spaces or other formatting required)
@@ -54,6 +56,7 @@ image="../ffg/img/Monster_Nightgaunt.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
 
 [MonsterDunwichHorror]
 ; Optional name for display (if spaces or other formatting required)
@@ -65,6 +68,7 @@ image="../ffg/img/Monster_Dunwich_Horror.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
 
 [MonsterWizard]
 ; Optional name for display (if spaces or other formatting required)
@@ -76,3 +80,4 @@ image="../ffg/img/Monster_Wizard.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
