Translating and correcting traits

--- a/content/MoM/base/tiles.ini
+++ b/content/MoM/base/tiles.ini
@@ -61,7 +61,7 @@ reverse=TileSideAlley2
 
 [TileSideBellTower]
 image="../ffg/img/Tile_Bell_Tower_MAD20.dds"
-traits=inside  small
+traits=inside small
 reverse=TileSideStreetCorner1
 
 [TileSideBilliardsRoom]
@@ -76,7 +76,7 @@ reverse=TileSideStorefront
 
 [TileSideDiningRoom]
 image="../ffg/img/Tile_Dining_Room_MAD20.dds"
-traits=inside medium kitcken
+traits=inside medium kitchen
 reverse=TileSideTownSquare
 
 [TileSideDock1]
