--- a/content/MoM/mom1e/tiles.ini
+++ b/content/MoM/mom1e/tiles.ini
@@ -124,7 +124,7 @@ reverse=TileSideFrontPorch
 
 [TileSideLibrary1E]
 image="../ffg/img/Tile_Library_MAD01.dds"
-traits=interior medium
+traits=inside medium
 reverse=TileSideGarden
 
 [TileSideMasterBedroom]
