Fixing MoM monster issues.

--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -42,7 +42,7 @@ traits=humanoid
 ; Optional name for display (if spaces or other formatting required)
 name={ffg:MONSTER_GHOST}
 ; image to display
-image="../ffg/img/MonsterGhost.dds"
+image="../ffg/img/Monster_Ghost.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 ; activation=
@@ -81,7 +81,7 @@ traits=humanoid
 ; Optional name for display (if spaces or other formatting required)
 name={ffg:MONSTER_STAR_SPAWN}
 ; image to display
-image="../ffg/img/Monster_StarSpawn.dds"
+image="../ffg/img/Monster_Star_Spawn.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 ; activation=
@@ -100,19 +100,6 @@ image="../ffg/img/Monster_Child_Of_Dagon.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
-traits=humanoid
-
-[MonsterHybridLeader]
-; Optional name for display (if spaces or other formatting required)
-name={ffg:UNIQUE_MONSTER_HYBRID_LEADER}
-; image to display
-image="../ffg/img/Monster_HybridLeader.dds"
-; optional priority, allows content packs to duplicate content and replace items
-; priority=0
-; activation=
-; Optional health modifier from number of players
-; health=2
-; healthperhero=2
 traits=humanoid
 
 [MonsterPriestOfDagon]
