--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -200,6 +200,7 @@ button1="Continue"
 randomevents=true
 conditions=$perilMinor,>,0
 trigger=EndRound
+display=false
 
 [PerilMajorPool]
 event1=PerilMajor1 PerilMajor2 PerilMajor4 PerilMajor9 PerilMajor11
@@ -207,6 +208,7 @@ button1="Continue"
 randomevents=true
 conditions=$perilMajor,>,0
 trigger=EndRound
+display=false
 
 [PerilDeadlyPool]
 event1=PerilDeadly1 PerilDeadly2
@@ -214,3 +216,4 @@ button1="Continue"
 randomevents=true
 conditions=$perilDeadly,>,0
 trigger=EndRound
+display=false
