--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -9,7 +9,7 @@ traits=undead small humanoid
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-health=1
+health=2
 healthperhero=1
 
 [MonsterCthonian]
@@ -96,5 +96,6 @@ image="../ffg/img/Monster_Cult_Leader.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=8
+healthperhero=4
 traits=humanoid
