--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -99,7 +99,8 @@ image="../ffg/img/Monster_Child_Of_Dagon.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
+healthperhero=1
 traits=humanoid
 
 [MonsterPriestOfDagon]
