--- a/content/MoM/cotw/monsters.ini
+++ b/content/MoM/cotw/monsters.ini
@@ -7,7 +7,8 @@ image="../ffg/img/Monster_Child_Of_The_Goat.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
+healthperhero=1
 traits=humanoid
 
 [MonsterDarkDruid]
@@ -32,7 +33,8 @@ image="../ffg/img/Monster_Dark_Young.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=4
+healthperhero=2
 traits=beast
 
 [MonsterGoatSpawn]
@@ -44,7 +46,8 @@ image="../ffg/img/Monster_Goat_Spawn.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
+healthperhero=2
 traits=humanoid
 
 [MonsterNightgaunt]
@@ -56,7 +59,8 @@ image="../ffg/img/Monster_Nightgaunt.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
+healthperhero=2
 traits=beast
 
 [MonsterDunwichHorror]
@@ -68,7 +72,8 @@ image="../ffg/img/Monster_Dunwich_Horror.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=2
+healthperhero=3
 traits=beast
 
 [MonsterWizard]
@@ -80,5 +85,6 @@ image="../ffg/img/Monster_Wizard.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=2
+healthperhero=1
 traits=humanoid
