--- a/content/MoM/fa/monsters.ini
+++ b/content/MoM/fa/monsters.ini
@@ -7,7 +7,8 @@ image="../ffg/img/Monster_Byakhee.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
+healthperhero=2
 traits=beast
 
 [MonsterCrawlingOne]
@@ -19,5 +20,6 @@ image="../ffg/img/Monster_Crawling_One.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=3
+healthperhero=1
 traits=beast
