--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -21,7 +21,8 @@ image="../ffg/img/Monster_Cthonian.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=3
+healthperhero=2
 traits=beast
 
 [MonsterHoundOfTindalos]
@@ -33,7 +34,8 @@ image="../ffg/img/Monster_Hound_Of_Tindalos.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
+healthperhero=2
 traits=beast
 
 [MonsterManiac]
@@ -45,7 +47,7 @@ image="../ffg/img/Monster_Maniac.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=2
 healthperhero=1
 traits=humanoid
 
@@ -58,7 +60,8 @@ image="../ffg/img/Monster_Mi_Go.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=3
+healthperhero=1
 traits=beast
 
 [MonsterShoggoth]
