Moving #fire to $fire.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -3,7 +3,7 @@ text={ffg:COMMON_MYTHOS_FIRE:{0}:{rnd:hero}}
 event1=
 button1={ffg:UI_TAP_TO_CONTINUE}
 trigger=Mythos
-conditions=#fire,>,0
+conditions=$fire,>,0
 
 ; rank 1.125
 [PerilActionHeroRoll01Street]
@@ -523,7 +523,7 @@ event1=PerilFire02
 button1={ffg:COMMON_MYTHOS_EVENT_RESOLVE}
 event2=
 button2={ffg:COMMON_MYTHOS_EVENT_NO_TARGET}
-conditions=$mythosMinor,>,0 #fire,>,0
+conditions=$mythosMinor,>,0 $fire,>,0
 
 [PerilFire02]
 text={ffg:MYTHOS_EVENT_FIRE_02:{0}:{rnd:hero}}
@@ -1039,7 +1039,7 @@ event1=PerilLivingFire02
 button1={ffg:COMMON_MYTHOS_EVENT_RESOLVE}
 event2=
 button2={ffg:COMMON_MYTHOS_EVENT_NO_TARGET}
-conditions=$mythosDeadly,>,0 #fire,>,0
+conditions=$mythosDeadly,>,0 $fire,>,0
 
 [PerilLivingFire02]
 text={ffg:MYTHOS_EVENT_LIVING_FIRE_02:{0}:{rnd:hero}}
@@ -1872,7 +1872,7 @@ event1=PerilSweetSmoke02
 button1={ffg:COMMON_MYTHOS_EVENT_RESOLVE}
 event2=
 button2={ffg:COMMON_MYTHOS_EVENT_NO_TARGET}
-conditions=$mythosMajor,>,0 #fire,>,0
+conditions=$mythosMajor,>,0 $fire,>,0
 
 [PerilSweetSmoke02]
 text={ffg:MYTHOS_EVENT_SWEET_SMOKE_02:{0}:{rnd:hero}}
