Setting fire on mandatory events.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -759,6 +759,7 @@ conditions=$mythosDeadly,>,0
 text={ffg:MYTHOS_EVENT_HOT_POTATO_02:{0}:{rnd:hero}}
 event1=
 button1={ffg:UI_TAP_TO_CONTINUE}
+operations=$fire,=,1
 
 ; rank 3.25
 [PerilHulkOut]
@@ -1281,6 +1282,7 @@ text={ffg:MYTHOS_EVENT_NOW_WERE_COOKING:{0}:{rnd:hero}}
 conditions=$mythosDeadly,>,0 $mythosKitchen,>,0
 event1=
 button1={ffg:UI_TAP_TO_CONTINUE}
+operations=$fire,=,1
 
 [PerilOceanBeach]
 text={ffg:MYTHOS_EVENT_OCEAN:{0}:{rnd:hero}}
