Adding thrall health

--- a/content/MoM/btt/monsters.ini
+++ b/content/MoM/btt/monsters.ini
@@ -7,5 +7,6 @@ image="../ffg/img/Monster_Thrall.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=2
+healthperhero=1
 traits=humanoid
