Adding custom cursors.

--- a/content/D2E/base/images.ini
+++ b/content/D2E/base/images.ini
@@ -81,16 +81,16 @@ image="../ffg/img/MerickFerrowFull.dds"
 [ImageCircleUnknown]
 image="../ffg/img/Monster-Spawn-Point.dds"
 
-[ImageNerekhallDefeat]
+[ImageSoCDefeat]
 image="../ffg/img/Nerekhall_Defeat.dds"
 
-[ImageNerekhallIcon]
+[ImageSoCIcon]
 image="../ffg/img/Nerekhall_Icon.dds"
 
-[ImageNerekhallPrologue]
+[ImageSoCPrologue]
 image="../ffg/img/Nerekhall_Prologue.dds"
 
-[ImageNerekhallVictory]
+[ImageSoCVictory]
 image="../ffg/img/Nerekhall_Victory.dds"
 
 [ImageNerekhallBackground]
