#357 moving BtT spells into BtT.

--- a/content/MoM/btt/items.ini
+++ b/content/MoM/btt/items.ini
@@ -42,3 +42,13 @@ traits=tome
 name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
 image=../ffg/img/UniqueItem_CultistsJournal.dds
 traits=evidence tome
+
+[ItemSpellPoisonMist]
+name={ffg:SPELL_POISON_MIST}
+image=../ffg/img/Spell_PoisonMist.dds
+traits=spell
+
+[ItemSpellArcaneInsight]
+name={ffg:SPELL_ARCANE_INSIGHT}
+image=../ffg/img/Spell_ArcaneInsight.dds
+traits=spell
