All base game starting items and skills in.

--- a/content/D2E/base/classes.ini
+++ b/content/D2E/base/classes.ini
@@ -64,3 +64,43 @@ xp=3
 name="Death Rage"
 xp=3
 
+[ClassDisciple]
+archetype=healer
+items=ItemIronMace ItemWoodenShield
+
+[SkillDisciplePrayerOfHealing]
+name="Prayer of Healing"
+
+[ClassSpiritSpeaker]
+name="Spirit Speaker"
+archetype=healer
+items=ItemOakStaff
+
+[SkillSpiritSpeakerStoneskin]
+
+[ClassNecromancer]
+name="Spirit Speaker"
+archetype=mage
+items=ItemReapersScythe
+
+[SkillNecromancerRaiseDead]
+name="Raise Dead"
+
+[ClassRunemaster]
+archetype=mage
+items=ItemArcaneBolt
+
+[SkillRunemasterRunicKnowledge]
+name="Runic Knowledge"
+
+[ClassThief]
+archetype=scout
+items=ItemThrowingKnives ItemLuckyCharmThief
+
+[SkillThiefGreedy]
+
+[ClassWildlander]
+archetype=scout
+items=ItemYewShortbow
+
+[SkillWildlanderNimble]
