--- a/content/D2E/base/items.ini
+++ b/content/D2E/base/items.ini
@@ -2,7 +2,7 @@
 name="Iron Longsword"
 ; optional Minimum Fame for purchase (default 0)
 ; optional Maximum Fame for purchase (default to -1, unlimited)
-traits=starting melee blade 1hand
+traits=starting melee blade 1hand weapon
 
 [ItemWoodenShield]
 name="Wooden Shield"
@@ -10,4 +10,32 @@ traits=starting shield 1hand
 
 [ItemChippedGreataxe]
 name="Chipped Greataxe"
-traits=starting melee axe 2hand
+traits=starting melee axe 2hand weapon
+
+[ItemIronMace]
+name="Iron Mace"
+traits=starting melee hammer 1hand weapon
+
+[ItemOakStaff]
+name="Oak Staff"
+traits=starting melee staff 2hand weapon
+
+[ItemReapersScythe]
+name="Reaper's Scythe"
+traits=starting ranged staff magic 2hand weapon
+
+[ItemArcaneBolt]
+name="Arcane Bolt"
+traits=starting ranged rune magic 2hand weapon
+
+[ItemThrowingKnives]
+name="Throwing Knives"
+traits=starting ranged blade 1hand weapon
+
+[ItemLuckyCharmThief]
+name="Lucky Charm"
+traits=starting trinket other
+
+[ItemYewShortbow]
+name="Yew Shortbow"
+traits=starting ranged bow 2hand weapon
