Adding more class data.

--- a/content/D2E/base/classes.ini
+++ b/content/D2E/base/classes.ini
@@ -71,12 +71,74 @@ items=ItemIronMace ItemWoodenShield
 [SkillDisciplePrayerOfHealing]
 name="Prayer of Healing"
 
+[SkillDiscipleBlessedStrike]
+name="Blessed Strike"
+xp=1
+
+[SkillDiscipleCleansingTouch]
+name="Cleansing Touch"
+xp=1
+
+[SkillDiscipleArmorOfFaith]
+name="Armor of Faith"
+xp=1
+
+[SkillDiscipleTimeOfNeed]
+name="Time of Need"
+xp=2
+
+[SkillDiscipleDivineFury]
+name="Divine Fury"
+xp=2
+
+[SkillDisciplePrayerOfPeace]
+name="Prayer of Peace"
+xp=2
+
+[SkillDiscipleRadiantLight]
+name="Radiant Light"
+xp=3
+
+[SkillDiscipleHolyPower]
+name="Holy Power"
+xp=3
+
 [ClassSpiritSpeaker]
 name="Spirit Speaker"
 archetype=healer
 items=ItemOakStaff
 
 [SkillSpiritSpeakerStoneskin]
+
+[SkillSharedPain]
+name="Shared Pain"
+xp=1
+
+[SkillHealingRain]
+name="Healing Rain"
+xp=1
+
+[SkillDrainSpirit]
+name="Drain Spirit"
+xp=1
+
+[SkillTempest]
+xp=2
+
+[SkillCloudOfMist]
+name="Cloud of Mist"
+xp=2
+
+[SkillNaturesBounty]
+name="Nature's Bounty"
+xp=2
+
+[SkillVigor]
+xp=3
+
+[SkillAncestorSpirits]
+name="Ancestor Spirits"
+xp=3
 
 [ClassNecromancer]
 archetype=mage
@@ -85,6 +147,38 @@ items=ItemReapersScythe
 [SkillNecromancerRaiseDead]
 name="Raise Dead"
 
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=3
+
+[Skill]
+name=""
+xp=3
+
 [ClassRunemaster]
 archetype=mage
 items=ItemArcaneBolt
@@ -92,14 +186,103 @@ items=ItemArcaneBolt
 [SkillRunemasterRunicKnowledge]
 name="Runic Knowledge"
 
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=3
+
+[Skill]
+name=""
+xp=3
+
 [ClassThief]
 archetype=scout
 items=ItemThrowingKnives ItemLuckyCharmThief
 
 [SkillThiefGreedy]
 
+[SkillSneaky]
+xp=1
+
+[SkillDirty Tricks]
+name="Dirty Tricks"
+xp=1
+
+[SkillAppraisal]
+xp=1
+
+[SkillUnseen]
+xp=2
+
+[SkillCaltrops]
+xp=2
+
+[SkillTumble]
+xp=2
+
+[SkillLurk]
+xp=3
+
+[SkillBushwhack]
+xp=3
+
 [ClassWildlander]
 archetype=scout
 items=ItemYewShortbow
 
 [SkillWildlanderNimble]
+
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=1
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=2
+
+[Skill]
+name=""
+xp=3
+
+[Skill]
+name=""
+xp=3
