Finishing base game skills.

--- a/content/D2E/base/classes.ini
+++ b/content/D2E/base/classes.ini
@@ -110,33 +110,33 @@ items=ItemOakStaff
 
 [SkillSpiritSpeakerStoneskin]
 
-[SkillSharedPain]
+[SkillpiritSpeakerSharedPain]
 name="Shared Pain"
 xp=1
 
-[SkillHealingRain]
+[SkillpiritSpeakerHealingRain]
 name="Healing Rain"
 xp=1
 
-[SkillDrainSpirit]
+[SkillpiritSpeakerDrainSpirit]
 name="Drain Spirit"
 xp=1
 
-[SkillTempest]
+[SkillpiritSpeakerTempest]
 xp=2
 
-[SkillCloudOfMist]
+[SkillpiritSpeakerCloudOfMist]
 name="Cloud of Mist"
 xp=2
 
-[SkillNaturesBounty]
+[SkillpiritSpeakerNaturesBounty]
 name="Nature's Bounty"
 xp=2
 
-[SkillVigor]
+[SkillpiritSpeakerVigor]
 xp=3
 
-[SkillAncestorSpirits]
+[SkillpiritSpeakerAncestorSpirits]
 name="Ancestor Spirits"
 xp=3
 
@@ -147,36 +147,36 @@ items=ItemReapersScythe
 [SkillNecromancerRaiseDead]
 name="Raise Dead"
 
-[Skill]
-name=""
+[SkillNecromancerCorpseBlast]
+name="Corpse Blast"
 xp=1
 
-[Skill]
-name=""
+[SkillNecromancerFuryOfUndeath]
+name="Fury of Undeath"
 xp=1
 
-[Skill]
-name=""
+[SkillNecromancerDeathlyHaste]
+name="Deathly Haste"
 xp=1
 
-[Skill]
-name=""
+[SkillNecromancerVampiricBlood]
+name="Vampiric Blood"
 xp=2
 
-[Skill]
-name=""
+[SkillNecromancerDarkPact]
+name="Dark Pact"
 xp=2
 
-[Skill]
-name=""
+[SkillNecromancerUndeadMight]
+name="Undead Might"
 xp=2
 
-[Skill]
-name=""
+[SkillNecromancerDyingCommand]
+name="Dying Command"
 xp=3
 
-[Skill]
-name=""
+[SkillNecromancerArmyOfDeath]
+name="Army of Death"
 xp=3
 
 [ClassRunemaster]
@@ -186,36 +186,36 @@ items=ItemArcaneBolt
 [SkillRunemasterRunicKnowledge]
 name="Runic Knowledge"
 
-[Skill]
-name=""
+[SkillRunemasterExplodingRune]
+name="Exploding Rune"
 xp=1
 
-[Skill]
-name=""
+[SkillRunemasterInscribeRune]
+name="Inscribe Rune"
 xp=1
 
-[Skill]
-name=""
+[SkillRunemasterGhostArmor]
+name="Ghost Armor"
 xp=1
 
-[Skill]
-name=""
+[SkillRunemasterRunicSorcery]
+name="Runic Sorcery"
 xp=2
 
-[Skill]
-name=""
+[SkillRunemasterIronWill]
+name="Iron Will"
 xp=2
 
-[Skill]
-name=""
+[SkillRunemasterRuneMastery]
+name="Rune Mastery"
 xp=2
 
-[Skill]
-name=""
+[SkillRunemasterBreakTheRune]
+name="Break the Rune"
 xp=3
 
-[Skill]
-name=""
+[SkillRunemasterQuickCasting]
+name="Quick Casting"
 xp=3
 
 [ClassThief]
@@ -224,29 +224,29 @@ items=ItemThrowingKnives ItemLuckyCharmThief
 
 [SkillThiefGreedy]
 
-[SkillSneaky]
+[SkillThiefSneaky]
 xp=1
 
-[SkillDirty Tricks]
+[SkillThiefDirtyTricks]
 name="Dirty Tricks"
 xp=1
 
-[SkillAppraisal]
+[SkillThiefAppraisal]
 xp=1
 
-[SkillUnseen]
+[SkillThiefUnseen]
 xp=2
 
-[SkillCaltrops]
+[SkillThiefCaltrops]
 xp=2
 
-[SkillTumble]
+[SkillThiefTumble]
 xp=2
 
-[SkillLurk]
+[SkillThiefLurk]
 xp=3
 
-[SkillBushwhack]
+[SkillThiefBushwhack]
 xp=3
 
 [ClassWildlander]
@@ -255,34 +255,33 @@ items=ItemYewShortbow
 
 [SkillWildlanderNimble]
 
-[Skill]
-name=""
+[SkillWildlanderEagleEyes]
+name="Eagle Eyes"
 xp=1
 
-[Skill]
-name=""
+[SkillWildlanderDangerSense]
+name="Danger Sense"
 xp=1
 
-[Skill]
-name=""
+[SkillWildlanderAccurate]
 xp=1
 
-[Skill]
-name=""
+[SkillWildlanderFleetOfFoot]
+name="Fleet of Foot"
 xp=2
 
-[Skill]
-name=""
+[SkillWildlanderBowMastery]
+name="Bow Mastery"
 xp=2
 
-[Skill]
-name=""
+[SkillWildlanderFirstStrike]
+name="First Strike"
 xp=2
 
-[Skill]
-name=""
+[SkillWildlanderRunningShot]
+name="Running Shot"
 xp=3
 
-[Skill]
-name=""
+[SkillWildlanderBlackArrow]
+name="Black Arrow"
 xp=3
