#367 Fixing MiGo content.

--- a/content/MoM/base/activations.ini
+++ b/content/MoM/base/activations.ini
@@ -2074,139 +2074,139 @@ ability={ffg:MONSTER_MANIAC_MOVE_24}
 master={ffg:MONSTER_MANIAC_ATTACK_24}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationMigo01]
+[MonsterActivationMiGo01]
 ability={ffg:MONSTER_MIGO_MOVE_01}
 master={ffg:MONSTER_MIGO_ATTACK_01}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationMigo02]
+[MonsterActivationMiGo02]
 ability={ffg:MONSTER_MIGO_MOVE_02}
 master={ffg:MONSTER_MIGO_ATTACK_02}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationMigo03]
+[MonsterActivationMiGo03]
 ability={ffg:MONSTER_MIGO_MOVE_03}
 master={ffg:MONSTER_MIGO_ATTACK_03}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationMigo04]
+[MonsterActivationMiGo04]
 ability={ffg:MONSTER_MIGO_MOVE_04}
 master={ffg:MONSTER_MIGO_ATTACK_04}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationMigo05]
+[MonsterActivationMiGo05]
 ability={ffg:MONSTER_MIGO_MOVE_05}
 master={ffg:MONSTER_MIGO_ATTACK_05}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationMigo06]
+[MonsterActivationMiGo06]
 ability={ffg:MONSTER_MIGO_MOVE_06}
 master={ffg:MONSTER_MIGO_ATTACK_06}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
-[MonsterActivationMigo07]
+[MonsterActivationMiGo07]
 ability={ffg:MONSTER_MIGO_MOVE_07}
 master={ffg:MONSTER_MIGO_ATTACK_07}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo08]
+[MonsterActivationMiGo08]
 ability={ffg:MONSTER_MIGO_MOVE_08}
 master={ffg:MONSTER_MIGO_ATTACK_08}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo09]
+[MonsterActivationMiGo09]
 ability={ffg:MONSTER_MIGO_MOVE_09}
 master={ffg:MONSTER_MIGO_ATTACK_09}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo10]
+[MonsterActivationMiGo10]
 ability={ffg:MONSTER_MIGO_MOVE_10}
 master={ffg:MONSTER_MIGO_ATTACK_10}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo11]
+[MonsterActivationMiGo11]
 ability={ffg:MONSTER_MIGO_MOVE_11}
 master={ffg:MONSTER_MIGO_ATTACK_11}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo12]
+[MonsterActivationMiGo12]
 ability={ffg:MONSTER_MIGO_MOVE_12}
 master={ffg:MONSTER_MIGO_ATTACK_12}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo13]
+[MonsterActivationMiGo13]
 ability={ffg:MONSTER_MIGO_MOVE_13}
 master={ffg:MONSTER_MIGO_ATTACK_13}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo14]
+[MonsterActivationMiGo14]
 ability={ffg:MONSTER_MIGO_MOVE_14}
 master={ffg:MONSTER_MIGO_ATTACK_14}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo15]
+[MonsterActivationMiGo15]
 ability={ffg:MONSTER_MIGO_MOVE_15}
 master={ffg:MONSTER_MIGO_ATTACK_15}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo16]
+[MonsterActivationMiGo16]
 ability={ffg:MONSTER_MIGO_MOVE_16}
 master={ffg:MONSTER_MIGO_ATTACK_16}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo17]
+[MonsterActivationMiGo17]
 ability={ffg:MONSTER_MIGO_MOVE_17}
 master={ffg:MONSTER_MIGO_ATTACK_17}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo18]
+[MonsterActivationMiGo18]
 ability={ffg:MONSTER_MIGO_MOVE_18}
 master={ffg:MONSTER_MIGO_ATTACK_18}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo19]
+[MonsterActivationMiGo19]
 ability={ffg:MONSTER_MIGO_MOVE_19}
 master={ffg:MONSTER_MIGO_ATTACK_19}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo20]
+[MonsterActivationMiGo20]
 ability={ffg:MONSTER_MIGO_MOVE_20}
 master={ffg:MONSTER_MIGO_ATTACK_20}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo21]
+[MonsterActivationMiGo21]
 ability={ffg:MONSTER_MIGO_MOVE_21}
 master={ffg:MONSTER_MIGO_ATTACK_21}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo22]
+[MonsterActivationMiGo22]
 ability={ffg:MONSTER_MIGO_MOVE_22}
 master={ffg:MONSTER_MIGO_ATTACK_22}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo23]
+[MonsterActivationMiGo23]
 ability={ffg:MONSTER_MIGO_MOVE_23}
 master={ffg:MONSTER_MIGO_ATTACK_23}
 movebutton={ffg:UI_NOT_IN_RANGE}
 move={ffg:MONSTER_COMMON_MOVE_02}
 
-[MonsterActivationMigo24]
+[MonsterActivationMiGo24]
 ability={ffg:MONSTER_MIGO_MOVE_24}
 master={ffg:MONSTER_MIGO_ATTACK_24}
 movebutton={ffg:UI_NOT_IN_RANGE}
