--- a/content/MoM/base/evade.ini
+++ b/content/MoM/base/evade.ini
@@ -766,51 +766,51 @@ text={ffg:MONSTER_MANIAC_EVADE_11}
 monster=Maniac
 text={ffg:MONSTER_MANIAC_EVADE_12}
 
-[EvadeMigo01]
+[EvadeMiGo01]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_01}
 
-[EvadeMigo02]
+[EvadeMiGo02]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_02}
 
-[EvadeMigo03]
+[EvadeMiGo03]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_03}
 
-[EvadeMigo04]
+[EvadeMiGo04]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_04}
 
-[EvadeMigo05]
+[EvadeMiGo05]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_05}
 
-[EvadeMigo06]
+[EvadeMiGo06]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_06}
 
-[EvadeMigo07]
+[EvadeMiGo07]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_07}
 
-[EvadeMigo08]
+[EvadeMiGo08]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_08}
 
-[EvadeMigo09]
+[EvadeMiGo09]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_09}
 
-[EvadeMigo10]
+[EvadeMiGo10]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_10}
 
-[EvadeMigo11]
+[EvadeMiGo11]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_11}
 
-[EvadeMigo12]
+[EvadeMiGo12]
 monster=Migo
 text={ffg:MONSTER_MIGO_EVADE_12}
 
