--- a/content/MoM/base/horror.ini
+++ b/content/MoM/base/horror.ini
@@ -762,51 +762,51 @@ text={ffg:MONSTER_MANIAC_HORROR_11}
 monster=Maniac
 text={ffg:MONSTER_MANIAC_HORROR_12}
 
-[HorrorMigo01]
+[HorrorMiGo01]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_01}
 
-[HorrorMigo02]
+[HorrorMiGo02]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_02}
 
-[HorrorMigo03]
+[HorrorMiGo03]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_03}
 
-[HorrorMigo04]
+[HorrorMiGo04]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_04}
 
-[HorrorMigo05]
+[HorrorMiGo05]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_05}
 
-[HorrorMigo06]
+[HorrorMiGo06]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_06}
 
-[HorrorMigo07]
+[HorrorMiGo07]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_07}
 
-[HorrorMigo08]
+[HorrorMiGo08]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_08}
 
-[HorrorMigo09]
+[HorrorMiGo09]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_09}
 
-[HorrorMigo10]
+[HorrorMiGo10]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_10}
 
-[HorrorMigo11]
+[HorrorMiGo11]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_11}
 
-[HorrorMigo12]
+[HorrorMiGo12]
 monster=Migo
 text={ffg:MONSTER_MIGO_HORROR_12}
 
