More work on skills window.

--- a/content/D2E/base/classes.ini
+++ b/content/D2E/base/classes.ini
@@ -6,12 +6,15 @@ items=ItemIronLongsword ItemWoodenShield
 name="Oath of Honor"
 
 [SkillKnightDefend]
+name="Defend"
 xp=1
 
 [SkillKnightChallenge]
+name="Challenge"
 xp=1
 
 [SkillKnightAdvance]
+name="Advance"
 xp=1
 
 [SkillKnightShieldSlam]
@@ -23,12 +26,15 @@ name="Defense Training"
 xp=2
 
 [SkillKnightGuard]
+name="Guard"
 xp=2
 
 [SkillKnightStalwart]
+name="Stalwart"
 xp=3
 
 [SkillKnightInspiration]
+name="Inspiration"
 xp=3
 
 [ClassBerserker]
@@ -36,18 +42,22 @@ archetype=warrior
 items=ItemChippedGreatAxe
 
 [SkillBerserkerRage]
+name="Rage"
 
 [SkillBerserkerCounterAttack]
 name="Counter Attack"
 xp=1
 
 [SkillBerserkerCripple]
+name="Cripple"
 xp=1
 
 [SkillBerserkerBrute]
+name="Brute"
 xp=1
 
 [SkillBerserkerWhirlwind]
+name="Whirlwind"
 xp=2
 
 [SkillBerserkerWeaponMastery]
@@ -55,9 +65,11 @@ name="Weapon Mastery"
 xp=2
 
 [SkillBerserkerCharge]
+name="Charge"
 xp=2
 
 [SkillBerserkerExecute]
+name="Execute"
 xp=3
 
 [SkillBerserkerDeathRage]
@@ -109,34 +121,37 @@ archetype=healer
 items=ItemOakStaff
 
 [SkillSpiritSpeakerStoneskin]
+name="Stoneskin"
 
-[SkillpiritSpeakerSharedPain]
+[SkillSpiritSpeakerSharedPain]
 name="Shared Pain"
 xp=1
 
-[SkillpiritSpeakerHealingRain]
+[SkillSpiritSpeakerHealingRain]
 name="Healing Rain"
 xp=1
 
-[SkillpiritSpeakerDrainSpirit]
+[SkillSpiritSpeakerDrainSpirit]
 name="Drain Spirit"
 xp=1
 
-[SkillpiritSpeakerTempest]
+[SkillSpiritSpeakerTempest]
+name="Tempest"
 xp=2
 
-[SkillpiritSpeakerCloudOfMist]
+[SkillSpiritSpeakerCloudOfMist]
 name="Cloud of Mist"
 xp=2
 
-[SkillpiritSpeakerNaturesBounty]
+[SkillSpiritSpeakerNaturesBounty]
 name="Nature's Bounty"
 xp=2
 
-[SkillpiritSpeakerVigor]
+[SkillSpiritSpeakerVigor]
+name="Vigor"
 xp=3
 
-[SkillpiritSpeakerAncestorSpirits]
+[SkillSpiritSpeakerAncestorSpirits]
 name="Ancestor Spirits"
 xp=3
 
@@ -223,8 +238,10 @@ archetype=scout
 items=ItemThrowingKnives ItemLuckyCharmThief
 
 [SkillThiefGreedy]
+name="Greedy"
 
 [SkillThiefSneaky]
+name="Sneaky"
 xp=1
 
 [SkillThiefDirtyTricks]
@@ -232,21 +249,27 @@ name="Dirty Tricks"
 xp=1
 
 [SkillThiefAppraisal]
+name="Appraisal"
 xp=1
 
 [SkillThiefUnseen]
+name="Unseen"
 xp=2
 
 [SkillThiefCaltrops]
+name="Caltrops"
 xp=2
 
 [SkillThiefTumble]
+name="Tumble"
 xp=2
 
 [SkillThiefLurk]
+name="Lurk"
 xp=3
 
 [SkillThiefBushwhack]
+name="Bushwhack"
 xp=3
 
 [ClassWildlander]
@@ -254,6 +277,7 @@ archetype=scout
 items=ItemYewShortbow
 
 [SkillWildlanderNimble]
+name="Nimble"
 
 [SkillWildlanderEagleEyes]
 name="Eagle Eyes"
@@ -264,6 +288,7 @@ name="Danger Sense"
 xp=1
 
 [SkillWildlanderAccurate]
+name="Accurate"
 xp=1
 
 [SkillWildlanderFleetOfFoot]
