Skill window working.

--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -1,3 +1,7 @@
+;Dummy peril to set var names
+[PerilEmpty]
+conditions=$xp,==,0 $morale,==,0
+
 ; PerilMinor1 unsure about PERIL_MINOR_1_2, PERIL_MINOR_1_1
 [PerilMinor1]
 text={ffg:PERIL_MINOR_1_RULES:{0}:{rnd:hero}}
