--- a/content/D2E/base/classes.ini
+++ b/content/D2E/base/classes.ini
@@ -1,6 +1,6 @@
 [ClassKnight]
 archetype=warrior
-items=ItemIronLongsword ItemWoodenShield
+items=ItemIronLongsword ItemWoodenShieldKnight
 
 [SkillKnightOathofHonor]
 name="Oath of Honor"
@@ -78,7 +78,7 @@ xp=3
 
 [ClassDisciple]
 archetype=healer
-items=ItemIronMace ItemWoodenShield
+items=ItemIronMace ItemWoodenShieldDisciple
 
 [SkillDisciplePrayerOfHealing]
 name="Prayer of Healing"
