--- a/content/D2E/base/items.ini
+++ b/content/D2E/base/items.ini
@@ -4,7 +4,11 @@ name="Iron Longsword"
 ; optional Maximum Fame for purchase (default to -1, unlimited)
 traits=starting melee blade 1hand weapon
 
-[ItemWoodenShield]
+[ItemWoodenShieldKnight]
+name="Wooden Shield"
+traits=starting shield 1hand
+
+[ItemWoodenShieldDisciple]
 name="Wooden Shield"
 traits=starting shield 1hand
 
