Adding item images.

--- a/content/D2E/base/items.ini
+++ b/content/D2E/base/items.ini
@@ -1,45 +1,56 @@
 [ItemIronLongsword]
 name="Iron Longsword"
+image="../ffg/img/Item_IronLongsword.dds"
 ; optional Minimum Fame for purchase (default 0)
 ; optional Maximum Fame for purchase (default to -1, unlimited)
 traits=starting melee blade 1hand weapon
 
 [ItemWoodenShieldKnight]
 name="Wooden Shield"
+image="../ffg/img/Item_WoodenShield.dds"
 traits=starting shield 1hand
 
 [ItemWoodenShieldDisciple]
 name="Wooden Shield"
+image="../ffg/img/Item_WoodenShield.dds"
 traits=starting shield 1hand
 
 [ItemChippedGreataxe]
 name="Chipped Greataxe"
+image="../ffg/img/Item_ChippedGreataxe.dds"
 traits=starting melee axe 2hand weapon
 
 [ItemIronMace]
 name="Iron Mace"
+image="../ffg/img/Item_IronMace.dds"
 traits=starting melee hammer 1hand weapon
 
 [ItemOakStaff]
 name="Oak Staff"
+image="../ffg/img/Item_OakStaff.dds"
 traits=starting melee staff 2hand weapon
 
 [ItemReapersScythe]
 name="Reaper's Scythe"
+image="../ffg/img/Item_ReapersScythe.dds"
 traits=starting ranged staff magic 2hand weapon
 
 [ItemArcaneBolt]
 name="Arcane Bolt"
+image="../ffg/img/Item_ArcaneBolt.dds"
 traits=starting ranged rune magic 2hand weapon
 
 [ItemThrowingKnives]
 name="Throwing Knives"
+image="../ffg/img/Item_ThrowingKnives.dds"
 traits=starting ranged blade 1hand weapon
 
 [ItemLuckyCharmThief]
 name="Lucky Charm"
+image="../ffg/img/Item_LuckyCharm.dds"
 traits=starting trinket other
 
 [ItemYewShortbow]
 name="Yew Shortbow"
+image="../ffg/img/Item_YewShortbow.dds"
 traits=starting ranged bow 2hand weapon
