--- a/content/D2E/base/items.ini
+++ b/content/D2E/base/items.ini
@@ -17,40 +17,40 @@ traits=starting shield 1hand
 
 [ItemChippedGreataxe]
 name="Chipped Greataxe"
-image="../ffg/img/Item_ChippedGreataxe.dds"
+image="../ffg/img/Item_Chipped Greataxe.dds"
 traits=starting melee axe 2hand weapon
 
 [ItemIronMace]
 name="Iron Mace"
-image="../ffg/img/Item_IronMace.dds"
+image="../ffg/img/Item_Iron Mace.dds"
 traits=starting melee hammer 1hand weapon
 
 [ItemOakStaff]
 name="Oak Staff"
-image="../ffg/img/Item_OakStaff.dds"
+image="../ffg/img/Item_Oak Staff.dds"
 traits=starting melee staff 2hand weapon
 
 [ItemReapersScythe]
 name="Reaper's Scythe"
-image="../ffg/img/Item_ReapersScythe.dds"
+image="../ffg/img/Item_Reaper's Scythe.dds"
 traits=starting ranged staff magic 2hand weapon
 
 [ItemArcaneBolt]
 name="Arcane Bolt"
-image="../ffg/img/Item_ArcaneBolt.dds"
+image="../ffg/img/Item_Arcane Bolt.dds"
 traits=starting ranged rune magic 2hand weapon
 
 [ItemThrowingKnives]
 name="Throwing Knives"
-image="../ffg/img/Item_ThrowingKnives.dds"
+image="../ffg/img/Item_Throwing Knives.dds"
 traits=starting ranged blade 1hand weapon
 
 [ItemLuckyCharmThief]
 name="Lucky Charm"
-image="../ffg/img/Item_LuckyCharm.dds"
+image="../ffg/img/Item_Lucky Charm.dds"
 traits=starting trinket other
 
 [ItemYewShortbow]
 name="Yew Shortbow"
-image="../ffg/img/Item_YewShortbow.dds"
+image="../ffg/img/Item_Yew Shortbow.dds"
 traits=starting ranged bow 2hand weapon
