Add some items.

--- a/content/D2E/base/items.ini
+++ b/content/D2E/base/items.ini
@@ -54,3 +54,100 @@ traits=starting trinket other
 name="Yew Shortbow"
 image="../ffg/img/Item_Yew Shortbow.dds"
 traits=starting ranged bow 2hand weapon
+
+[ItemSunburst]
+image="../ffg/img/Item_Sunburst.dds"
+act=1
+price=125
+traits=shop ranged magic rune 2hand weapon
+
+[ItemIronSpear]
+name="Iron Spear"
+image="../ffg/img/Item_Iron Spear.dds"
+act=1
+price=75
+traits=shop melee exotic 1hand weapon
+
+[ItemElmGreatbow]
+name="Elm Greatbow"
+image="../ffg/img/Item_Elm Greatbow.dds"
+act=1
+price=100
+traits=shop ranged bow 2hand weapon
+
+[ItemChainmail]
+image="../ffg/img/Item_Chainmail.dds"
+act=1
+price=150
+traits=shop heavyarmor armor
+
+[ItemImmolation]
+image="../ffg/img/Item_Immolation.dds"
+act=1
+price=150
+traits=shop ranged magic rune 2hand weapon
+
+[ItemLuckyCharm]
+name="Lucky Charm"
+image="../ffg/img/Item_Lucky Charm.dds"
+act=1
+price=100
+traits=shop trinket other
+
+[ItemLightHammer]
+name="Light Hammer"
+image="../ffg/img/Item_Light Hammer.dds"
+act=1
+price=75
+traits=shop melee hammer 1hand weapon
+
+[ItemSling]
+image="../ffg/img/Item_Sling.dds"
+act=1
+price=75
+traits=shop ranged exotic 1hand weapon
+
+[ItemIronBattleaxe]
+name="Iron Battleaxe"
+image="../ffg/img/Item_Iron Battleaxe.dds"
+act=1
+price=100
+traits=shop melee axe 2hand weapon
+
+[ItemSteelBroadsword]
+name="Steel Broadsword"
+image="../ffg/img/Item_Steel Broadsword.dds"
+act=1
+price=75
+traits=shop melee blade 1hand weapon
+
+[ItemManaWeave]
+name=""
+image="../ffg/img/Item_Mana Weave.dds"
+act=1
+price=125
+traits=shop rune other
+
+[ItemLeatherArmor]
+name=""
+image="../ffg/img/Item_Leather Armor.dds"
+act=1
+price=75
+traits=shop lightarmor armor
+
+[ItemTivalCrystal]
+name="Tival Crystal"
+image="../ffg/img/Item_Tival Crystal.dds"
+act=2
+price=25
+traits=shop trinket other
+
+[ItemDawnblade]
+name="Dawnblade"
+image="../ffg/img/Item_Dawnblade.dds"
+traits=relic melee blade 1hand weapon
+
+[ItemFortunasDice]
+name="Fortuna's Dice"
+image="../ffg/img/Item_Fortuna's Dice.dds"
+traits=relic other trinket
