Adding more base item data.

--- a/content/D2E/base/items.ini
+++ b/content/D2E/base/items.ini
@@ -122,18 +122,46 @@ price=75
 traits=shop melee blade 1hand weapon
 
 [ItemManaWeave]
-name=""
+name="Mana Weave"
 image="../ffg/img/Item_Mana Weave.dds"
 act=1
 price=125
 traits=shop rune other
 
 [ItemLeatherArmor]
-name=""
+name="Leather Armor"
 image="../ffg/img/Item_Leather Armor.dds"
 act=1
 price=75
 traits=shop lightarmor armor
+
+[ItemScorpionHelm]
+name="Scorpion Helm"
+image="../ffg/img/Item_Scorpion Helm.dds"
+act=1
+price=75
+traits=shop helmet other
+
+[ItemHeavyCloak]
+name="Heavy Cloak"
+image="../ffg/img/Item_Heavy Cloak.dds"
+act=1
+price=75
+traits=shop cloak armor
+
+[ItemMagicStaff]
+name="Magic Staff"
+image="../ffg/img/Item_Magic Staff.dds"
+act=1
+price=125
+traits=shop ranged magic staff 2hand weapon
+
+[ItemIronShield]
+name="Iron Shield"
+image="../ffg/img/Item_Iron Shield.dds"
+act=1
+price=50
+traits=shop shield 1hand
 
 [ItemTivalCrystal]
 name="Tival Crystal"
@@ -151,3 +179,23 @@ traits=relic melee blade 1hand weapon
 name="Fortuna's Dice"
 image="../ffg/img/Item_Fortuna's Dice.dds"
 traits=relic other trinket
+
+[ItemShieldOfTheDarkGod]
+name="Shield of the Dark God"
+image="../ffg/img/Item_Shield of the Dark God.dds"
+traits=relic shield 1hand
+
+[ItemStaffOfLight]
+name="Staff of Light"
+image="../ffg/img/Item_Staff of Light.dds"
+traits=relic ranged magic staff 2hand weapon
+
+[ItemTheShadowRune]
+name="The Shadow Rune"
+image="../ffg/img/Item_The Shadow Rune.dds"
+traits=relic ranged magic rune 2hand weapon
+
+[ItemTrueshot]
+name="Trueshot"
+image="../ffg/img/Item_Trueshot.dds"
+traits=relic ranged bow 2hand weapon
