fix typo and update belt of alchemy to RtL cost

--- a/content/D2E/boxed/tt/items.ini
+++ b/content/D2E/boxed/tt/items.ini
@@ -22,7 +22,7 @@ traits=starting book other
 name="Belt of Alchemy"
 image="../ffg/img/Item_Belt of Alchemy.dds"
 act=1
-price=100
+price=25
 traits=shop belt other
 
 [ItemBeltOfWaterwalking]
@@ -39,7 +39,7 @@ act=1
 price=150
 traits=shop melee hammer exotic 2hand weapon
 
-[ItemDeflectingShiel]
+[ItemDeflectingShield]
 name="Deflecting Shield"
 image="../ffg/img/Item_Deflecting Shield.dds"
 act=1
