--- a/content/D2E/h&m/soe/monsters.ini
+++ b/content/D2E/h&m/soe/monsters.ini
@@ -4,8 +4,7 @@ image="../../ffg/img/Monster_IceWyrm.dds"
 imageplace="../../ffg/img/Monster_IceWyrm_Placement.dds"
 info={ffg:INSTRUCTION_ICE_WYRM}
 traits=melee cave cold massive
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 priority=1
 
 [MonsterDarkMinotaur]
