--- a/content/D2E/ck/toi/activations.ini
+++ b/content/D2E/ck/toi/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationIceWyrm1]
 ability={ffg:EFFECT_ICE_WYRM_1}
 minion={ffg:ICE_WYRM_1_MINION_0}
 master={ffg:ICE_WYRM_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationIceWyrm2]
 ability={ffg:EFFECT_ICE_WYRM_2}
 minion={ffg:ICE_WYRM_2_MINION_0}
 master={ffg:ICE_WYRM_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationIceWyrm3]
 ability={ffg:EFFECT_ICE_WYRM_3}
 minion={ffg:ICE_WYRM_3_MINION_0}
 master={ffg:ICE_WYRM_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationShade1]
 ability={ffg:EFFECT_SHADE_1}
