--- a/content/D2E/ck/toi/monsters.ini
+++ b/content/D2E/ck/toi/monsters.ini
@@ -4,8 +4,7 @@ image="../../ffg/img/Monster_IceWyrm.dds"
 imageplace="../../ffg/img/Monster_IceWyrm_Placement.dds"
 info="No additional instructions."
 traits=melee cave cold massive
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterShade]
 ; name=""
